# pirex

./: .gitignore  Cargo.toml  LICENSE.TXT  README.MD  README.md  client_prep_auto  config.py  control.py  server_prep_auto
results/: client_online  pirex_client_online.txt  pirex_server_online.txt  pirexx_client_online.txt  pirexx_server_online.txt  server_online
secp256k1/: Makefile  Makefile.in  aclocal.m4  bench  bench_ecmult  bench_internal  config.status  configure  configure.lineno  configure~  ctime_tests  exhaustive_tests  libsecp256k1.la  libsecp256k1.pc  libsecp256k1_precomputed.la  libtool  noverify_tests  tests
secp256k1/.libs/: bench  ctime_tests  libsecp256k1.lai  libsecp256k1.so.5.0.1
secp256k1/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.4
secp256k1/include/: secp256k1.h
secp256k1/src/: libsecp256k1_la-secp256k1.lo  libsecp256k1_precomputed_la-precomputed_ecmult.lo  libsecp256k1_precomputed_la-precomputed_ecmult_gen.lo  secp256k1.c
secp256k1/src/.deps/: bench-bench.Po  bench_ecmult-bench_ecmult.Po  bench_internal-bench_internal.Po  ctime_tests-ctime_tests.Po  exhaustive_tests-tests_exhaustive.Po  libsecp256k1_la-secp256k1.Plo  libsecp256k1_precomputed_la-precomputed_ecmult.Plo  (+3 more)
src/: _20_client.rs  _20_server.rs  _22_client.rs  _22_server.rs  build.rs  elgamal.rs  helper.rs  libs.rs  pirex_sprep.rs  pirex_sread.rs  pirex_uprep.rs  pirex_uread.rs  pirexx_sprep.rs  pirexx_sread.rs  pirexx_uprep.rs  pirexx_uread.rs  test_recv.rs  test_send.rs
utils/: helper.cpp  random.h
